feat: add examples for creating 1 million threads and virtual threads in Java